[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Money" type="Label" parent="."]
margin_left = 279.567
margin_top = 82.379
margin_right = 419.567
margin_bottom = 113.379
rect_scale = Vector2( 3, 3 )
text = "Money
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="."]
margin_left = 396.605
margin_top = 300.397
margin_right = 578.605
margin_bottom = 378.397
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="."]
margin_left = 400.605
margin_top = 398.397
margin_right = 572.605
margin_bottom = 472.397
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="add" type="Button" parent="."]
margin_left = 550.459
margin_top = 216.467
margin_right = 669.459
margin_bottom = 283.467
text = "Add"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sub" type="Button" parent="."]
margin_left = 311.815
margin_top = 213.635
margin_right = 430.815
margin_bottom = 280.635
text = "Sub"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="sub" to="." method="_on_sub_pressed"]
